ensure truncation for firefox and safari

--- a/x-pack/plugins/ml/public/components/field_data_card/_field_data_card.scss
+++ b/x-pack/plugins/ml/public/components/field_data_card/_field_data_card.scss
@@ -73,6 +73,10 @@
     @include euiTextTruncate;
   }
 
+  .valueWrapper {
+    display: inline;
+  }
+
   .not-exist-message {
     padding: 50px 30px 0px 30px;
     text-align: center;
